<resources>
    <string name="app_name">Chinabancard</string>
    <string name="action_settings">Setting</string>
    <string name="hello_world">Hello world!</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="zero_dollar">$0.00</string>
    <string name="number_zero">0</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_cap">EMAIL</string>
    <string name="print_cap">Print</string>
    <string name="print_header">Header print</string>
    <string name="send_receipt">Send receipt</string>
    <string name="no_receipt">No receipt</string>
    <string name="print_receipt">Print receipt</string>
    <string name="Actionbar_Cart">View the shopping cart with an operating bar on the shopping cart icon</string>
    <string name="add_additional_emails">Add additional emails</string>
    <string name="lockpattern_recording_incorrect_too_short" >"It must be 4 points at least，please try again"</string>
    <string name="lockpattern_error" >"Wrong gesture password"</string>
    <string name="lockscreen_access_pattern_start">Start the lockscreen pattern</string>
    <string name="lockscreen_access_pattern_cleared">Clear the lockscreen pattern</string>
    <string name="lockscreen_access_pattern_cell_added">Add a lockscreen</string>
    <string name="lockscreen_access_pattern_detected">Pattern drawed complete</string>
    <string name="setup_gesture_code">Set a gesture password</string>
    <string name="setup_gesture_pattern">Setup a unlock pattern</string>
    <string name="setup_gesture_pattern_again">Setup the unlock pattern again</string>
    <string name="forget_gesture_code">Forget the gesture password?</string>
    <string name="use_other_account_login">Use other account to login</string>
    <string name="set_gesture_pattern">Please draw a lock pattern</string>
    <string name="set_gesture_pattern_reason">Set a gesture password to protect private information</string>
    <string name="reset_gesture_code">Reset the gesture password</string>
    <string name="warning_reset_gesture_code">Warning: The gesture password will be reset</string>
    <string name="pull_to_refresh_pull_label">Pull down to refresh</string>
    <string name="pull_to_refresh_release_label">Release to refresh</string>
    <string name="pull_to_refresh_refreshing_label">Refreshing...</string>
    <string name="pull_to_refresh_footer_release_label">Release to load</string>
    <string name="pull_to_refresh_footer_pull_label">Pull up to load more</string>
    <string name="pull_to_refresh_footer_refreshing_label">Loading\u2026</string>
    <string name="loading_moreValues">Load more</string>
    <string name="hasloading_moreValues">Loading...</string>
    <string name="choose_menu_login">Login</string>
    <string name="choose_menu_shoping">Shopping</string>
    <string name="choose_menu_report">Report</string>
    <string name="choose_menu_manage">Manage</string>
    <string name="choose_menu_search">Search</string>
    <string name="choose_menu_setting">Settings</string>
    <string name="category_item_new_name">Function</string>
    <string name="category_item_new_title">Function</string>
    <string name="manage_image_text">Picture:</string>
    <string name="manage_serial_text">Serial number:</string>
    <string name="manage_name_text">Name:</string>
    <string name="manage_price_text">Price:</string>
    <string name="manage_describe_text">Describe:</string>
    <string name="manage_note_text">Note:</string>
    <string name="manage_stock_text">Stock:</string>
    <string name="manage_type_text">Type:</string>
    <string name="manage_submit_text">Submit</string>
    <string name="manage_typename_text">Type name:</string>
    <string name="title_alert">Title alert</string>
    <string name="num_1">1</string>
	<string name="num_2">2</string>
	<string name="num_3">3</string>
	<string name="num_4">4</string>
	<string name="num_5">5</string>
	<string name="num_6">6</string>
	<string name="num_7">7</string>
	<string name="num_8">8</string>
	<string name="num_9">9</string>
	<string name="digitstar">*</string>
	<string name="digit0">0+</string>
	<string name="digithash">#</string>
    <string name="swipe_scan_device">Choose device</string>
    <string name="swipe_check_card">Swipe card</string>
    <string name="swipe_quicki_check_card">Quick Trade</string>
    <string name="swipe_disconnect">Stop swipe card</string>
    <string name="swipe_zc_connect">Connect device</string>
    <string name="swipe_zc_ic">IC card</string>
    <string name="swipe_zc_mag">Magnetic strip card</string>
    <string name="swipe_zc_nfc">NFC</string>
    <string name="image"></string>
    <string name="product_type_title">Please select type</string>
    <string name="product_type">Product Type:</string>
    <string name="status">Status</string>
    <string name="status_com">Status:</string>
    <string name="app_name1">Chip and PIN payment</string>
    <string name="waiting_for_card">Wait for card</string>
    <string name="no_card_detected">No card detected,please remove it and try again</string>
    <string name="icc_card_inserted">ICC card inserted</string>
    <string name="card_inserted">Card inserted(not ICC card)</string>
    <string name="bad_swipe">Reading failed,please remove card and try again</string>
    <string name="card_swiped">Swiped card:</string>
    <string name="mag_head_fail">Magnetic head failure</string>
    <string name="card_no_response">No swipe card reply</string>
    <string name="card_swiped_track2_only">Card Swiped (Track 2 only):\n</string>
    <string name="format_id">Format ID:</string>
    <string name="masked_pan">Masked PAN:</string>
    <string name="expiry_date">Expiry data</string>
    <string name="card_holder_name">Cardholder name:</string>
    <string name="ksn">KSN: </string>
    <string name="service_code">Service code:</string>
    <string name="encrypted_track_1">Encrypted track 1:</string>
    <string name="encrypted_track_2">Encrypted track 2:</string>
    <string name="encrypted_track_3">Encrypted track 3:</string>
    <string name="card_data">Swipe card data</string>
    <string name="start_emv_fail">Start emv failed</string>
    <string name="start_emv_success">Start emv successed</string>
    <string name="app_version">App version:</string>
    <string name="bootloader_version">Bootloader version:</string>
    <string name="firmware_version">Firmware version:</string>
    <string name="usb">USB:</string>
    <string name="charge">Charge:</string>
    <string name="battery_level">Battery level:</string>
    <string name="set_amount">Set amount</string>
    <string name="enter_pin">Please input PIN</string>
    <string name="online_process_requested">Request process online</string>
    <string name="request_data_to_server">Request data to server</string>
    <string name="replied_connected">Replied connected</string>
    <string name="replied_success">replied successfully</string>
    <string name="replied_failed">replied unsuccessfully</string>
    <string name="batch_data">Batch data:\n</string>
    <string name="transaction_log">Transaction log:\n</string>
    <string name="reversal_data">Reversal data:\n</string>
    <string name="please_select_app">Please select app</string>
    <string name="transaction_result">Transaction result</string>
    <string name="transaction_approved">Transaction approved</string>
    <string name="transaction_terminated">Transaction terminated</string>
    <string name="transaction_cancel">Transaction cancel</string>
    <string name="transaction_capk_fail">Transaction capk failed</string>
    <string name="transaction_not_icc">Transaction failed,no ICC card</string>
    <string name="transaction_app_fail">Transaction app failed</string>
    <string name="transaction_device_error">Transaction device error</string>
    <string name="tlv_list">TLV list:\n</string>
    <string name="advice_process">Advice process</string>
    <string name="call_your_bank">Please call your bank</string>
    <string name="request_terminal_time">Request terminal time,replied</string>
    <string name="confirm_amount">Confirm amount</string>
    <string name="amount">Amount</string>
    <string name="trans_type_com">Type:</string>
    <string name="amount_ok">Amount right?</string>
    <string name="approved">Approved</string>
    <string name="cancel_or_enter">Cancel or entry</string>
    <string name="card_error">Card error</string>
    <string name="enter_amount">Input amount</string>
    <string name="incorrect_pin">Wrong PIN</string>
    <string name="insert_card">Please insert card</string>
    <string name="not_accepted">Not accepted</string>
    <string name="pin_ok">PIN OK</string>
    <string name="wait">Processing,please wait&#8230;</string>
    <string name="processing_error">process error</string>
    <string name="finish_transaction">Transaction finish</string>
    <string name="remove_card">Please remove card</string>
    <string name="use_chip_reader">Please use chip reader</string>
    <string name="use_mag_stripe">Please use magnetic stripe</string>
    <string name="try_again">Try again</string>
    <string name="refer_payment_device">Please refer your payment device instruction</string>
    <string name="try_another_interface">Try another interface</string>
    <string name="online_required">Need to use online</string>
    <string name="welcome">Welcome</string>
    <string name="present_one_card">Please show your magcard</string>
    <string name="capk_failed">Load CAPK failed</string>
    <string name="last_pin_try">Please use the last pin to try again</string>
    <string name="battery_low">Low battery,please recharge</string>
    <string name="battery_critically_low">Battery is critically low and device will power off</string>
    <string name="no_device_detected">No device detected</string>
    <string name="get_info">Get device information</string>
    <string name="send_apdu">Send APDU</string>
    <string name="get_ksn">Get KSN</string>
    <string name="cancel_check_card">Cancel Check Card</string>
    <string name="auto_config">Auto Config</string>
    <string name="swipe">Swipe</string>
    <string name="insert">Insert</string>
    <string name="tap">Tap</string>
    <string name="swipe_or_insert">Swipe or Insert</string>
    <string name="swipe_or_tap">Swipe/Tap</string>
    <string name="insert_or_tap">Insert/Tap</string>
    <string name="swipe_or_insert_or_tap">Swipe/Insert/Tap</string>
    <string name="get_capk_list">Get CAPK List</string>
    <string name="get_capk_detail">Get CAPK Detail</string>
    <string name="find_capk">Find CAPK</string>
    <string name="update_capk">Update CAPK</string>
    <string name="get_emv_report_list">Get EMV Report List</string>
    <string name="get_emv_report">Get EMV Report</string>
    <string name="encrypt_data">Encrypt Data</string>
    <string name="start_connection">Start Connection</string>
    <string name="stop_connection">Stop Connection</string>
    <string name="integrity_check">Integrity check</string>
    <string name="capk1">capk</string>
    <string name="icc">icc</string>
    <string name="nfc">nfc</string>
    <string name="unpair_all">Unpair All</string>
    <string name="enable_input_amount">Enable Input Amount</string>
    <string name="print_sample">Print Sample (M361)</string>
    <string name="inject_session_key">Inject Session Key</string>
    <string name="encrypt_pin">Encrypt Pin</string>
    <string name="apdu">APDU</string>
    <string name="main">MainActivity</string>
    <string name="bdk">BDK</string>
    <string name="mk">Master Key</string>
    <string name="ks">KSN</string>
    <string name="menu_capk">CAPK</string>
    <string name="init_session">Initialize session</string>
    <string name="reset_session">Reset session</string>
    <string name="gprs_wifi">GPRS / WIFI</string>
</resources>