<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_start_connection"
        android:title="@string/start_connection"
        android:visible="true" />
    <item android:id="@+id/menu_stop_connection"
        android:title="@string/stop_connection"
        android:visible="true" />
    <item android:id="@+id/menu_unpair_all"
        android:title="@string/unpair_all"
        android:visible="true" />
    <item android:id="@+id/menu_init_session"
        android:title="@string/init_session"
        android:orderInCategory="100" />
    <item android:id="@+id/menu_reset_session"
        android:title="@string/reset_session"
        android:orderInCategory="100" />
    <item android:id="@+id/menu_get_deivce_info"
        android:title="@string/get_info"
        android:orderInCategory="100" />
    <item android:id="@+id/menu_cancel_check_card"
        android:title="@string/cancel_check_card"
        android:orderInCategory="100" />
    <item android:id="@+id/menu_auto_config"
        android:title="@string/auto_config"
        android:orderInCategory="100" />
    <item android:id="@+id/menu_enable_input_amount"
        android:title="@string/enable_input_amount"
        android:orderInCategory="100" />
    <item android:id="@+id/menu_encrypt_pin"
        android:title="@string/encrypt_pin"
        android:orderInCategory="100" />
    <item android:id="@+id/menu_encrypt_data"
        android:title="@string/encrypt_data"
        android:orderInCategory="100" />
    <item android:id="@+id/menu_send_apdu"
        android:title="@string/send_apdu"
        android:orderInCategory="100" />
    <item android:id="@+id/menu_print_sample"
        android:title="@string/print_sample"
        android:orderInCategory="100" />
    <item android:id="@+id/menu_main"
        android:title="@string/main"
        android:orderInCategory="100" />
    <item android:id="@+id/menu_apdu"
        android:title="@string/apdu"
        android:orderInCategory="100" />
    <item android:id="@+id/capk_activity"
        android:title="@string/menu_capk"
        android:orderInCategory="100" />
    <item android:id="@+id/menu_gprs_wifi"
        android:title="@string/gprs_wifi"
        android:orderInCategory="100" />
    <item android:id="@+id/menu_inject_session_key"
        android:title="@string/inject_session_key"
        android:visible="true"
        android:orderInCategory="100" />
</menu>
