<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
        >
	<TextView 
	    android:id="@+id/menu_start_connection"
	    android:text="@string/start_connection"
	    style="@style/popItem"
	    />
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/darker_gray"
	    />
	<TextView 
	    android:id="@+id/menu_stop_connection"
	    android:text="@string/stop_connection"
	    style="@style/popItem"
	    />
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/darker_gray"
	    />
	<TextView 
	    android:id="@+id/menu_unpair_all"
	    android:text="@string/unpair_all"
	    style="@style/popItem"
	    />
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/darker_gray"
	    />
	<TextView 
	    android:id="@+id/menu_initialize_session"
	    android:text="@string/init_session"
	    style="@style/popItem"
	    />
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/darker_gray"
	    />
	<TextView 
	    android:id="@+id/menu_reset_session"
	    android:text="@string/reset_session"
	    style="@style/popItem"
	    />
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/darker_gray"
	    />
	<TextView 
	    android:id="@+id/menu_get_deivce_info"
	    android:text="@string/get_info"
	    style="@style/popItem"
	    />
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/darker_gray"
	    />
	<TextView 
	    android:id="@+id/menu_enable_input_amount"
	    android:text="@string/enable_input_amount"
	    style="@style/popItem"
	    />
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/darker_gray"
	    />
	<TextView 
	    android:id="@+id/menu_cancel_check_card"
	    android:text="@string/cancel_check_card"
	    style="@style/popItem"
	    />
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/darker_gray"
	    />
	<TextView 
	    android:id="@+id/menu_auto_config"
	    android:text="@string/auto_config"
	    style="@style/popItem"
	    />
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/darker_gray"
	    />
	<TextView 
	    android:id="@+id/menu_encrypt_pin"
	    android:text="@string/encrypt_pin"
	    style="@style/popItem"
	    />
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/darker_gray"
	    />
	<TextView 
	    android:id="@+id/menu_encrypt_data"
	    android:text="@string/encrypt_data"
	    style="@style/popItem"
	    />
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/darker_gray"
	    />
	<TextView 
	    android:id="@+id/menu_send_apdu"
	    android:text="@string/send_apdu"
	    style="@style/popItem"
	    />
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/darker_gray"
	    />
	<TextView 
	    android:id="@+id/menu_print_sample"
	    android:text="@string/print_sample"
	    style="@style/popItem"
	    />
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/darker_gray"
	    />
	<TextView 
	    android:id="@+id/menu_mainactivity"
	    android:text="@string/main"
	    style="@style/popItem"
	    />
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/darker_gray"
	    />
	<TextView 
	    android:id="@+id/menu_apdu"
	    android:text="@string/apdu"
	    style="@style/popItem"
	    />
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/darker_gray"
	    />
	<TextView 
	    android:id="@+id/capk_activity"
	    android:text="@string/capk1"
	    style="@style/popItem"
	    />
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/darker_gray"
	    />
	<TextView 
	    android:id="@+id/menu_wifi"
	    android:text="@string/gprs_wifi"
	    style="@style/popItem"
	    />
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/darker_gray"
	    />
	<TextView 
	    android:id="@+id/menu_inject_session_key"
	    android:text="@string/inject_session_key"
	    style="@style/popItem"
	    />
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/darker_gray"
	    />
    </LinearLayout>
</ScrollView>
