<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<TextView 
	    android:id="@+id/menu_start_connection"
	    android:text="@string/start_connection"
	    style="@style/popItem"
	    />
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/black"
	    />
	<TextView 
	    android:id="@+id/menu_stop_connection"
	    android:text="@string/stop_connection"
	    style="@style/popItem"
	    />
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/black"
	    />
	<TextView 
	    android:id="@+id/menu_get_deivce_info"
	    android:text="@string/get_info"
	    style="@style/popItem"
	    />
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/black"
	    />
	<TextView 
	    android:id="@+id/menu_get_ksn"
	    android:text="@string/get_ksn"
	    style="@style/popItem"
	    />
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/black"
	    />
	<TextView 
	    android:id="@+id/menu_cancel_check_card"
	    android:text="@string/cancel_check_card"
	    style="@style/popItem"
	    />
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/black"
	    />
	<TextView 
	    android:id="@+id/menu_auto_config"
	    android:text="@string/auto_config"
	    style="@style/popItem"
	    />
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/black"
	    />
	<TextView 
	    android:id="@+id/menu_encrypt_data"
	    android:text="@string/encrypt_data"
	    style="@style/popItem"
	    />
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/black"
	    />
	<TextView 
	    android:id="@+id/icc_activity"
	    android:text="@string/icc"
	    style="@style/popItem"
	    />
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/black"
	    />
	<TextView 
	    android:id="@+id/nfc_activity"
	    android:text="@string/nfc"
	    style="@style/popItem"
	    />
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/black"
	    />
	<TextView 
	    android:id="@+id/capk_activity"
	    android:text="@string/capk1"
	    style="@style/popItem"
	    />
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/black"
	    />
	<TextView 
	    android:id="@+id/integrity_check"
	    android:text="@string/integrity_check"
	    style="@style/popItem"
	    />
    
</LinearLayout>
