<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<EditText
        android:id="@+id/kekEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="KEK"
        android:hint="@string/bdk" />
    
    <EditText
        android:id="@+id/mkEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="0123456789ABCDEFFEDCBA9876543210"
        android:hint="@string/mk" />
    
    <EditText
        android:id="@+id/ksnEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="0123456789ABCDEF"
        android:hint="@string/ks" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
	    <Button
	        android:id="@+id/setButton"
	        android:layout_weight=".5"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:text="@string/confirm" />
	    
	    <Button
	        android:id="@+id/cancelButton"
	        android:layout_weight=".5"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:text="@string/cancel" />
	    
    </LinearLayout>
</LinearLayout>
