<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/modelTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <Button 
	        android:id="@+id/getCAPKListButton"
	        android:layout_weight=".5"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:text="@string/get_capk_list" />
        
        <Button 
	        android:id="@+id/getCAPKDetailButton"
	        android:layout_weight=".5"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:text="@string/get_capk_detail" />
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <Button 
	        android:id="@+id/findCAPKButton"
	        android:layout_weight=".5"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:text="@string/find_capk" />
        
        <Button 
			android:id="@+id/updateCAPKButton"
			android:layout_weight=".5"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:singleLine="true"
			android:text="@string/update_capk" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <Button 
	        android:id="@+id/getEmvReportListButton"
	        android:layout_weight=".5"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:text="@string/get_emv_report_list" />
        
        <Button 
			android:id="@+id/getEmvReportButton"
			android:layout_weight=".5"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:singleLine="true"
			android:text="@string/get_emv_report" />
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
        
        <EditText
            android:id="@+id/statusEditText"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dip"
	    	android:layout_marginRight="5dip"
            android:editable="false" />
        
    </LinearLayout>
</LinearLayout>